[package]
edition = "2021"
name = "biu-uploader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
console = "0.15.7"
dialoguer = "0.11.0"
log = "0.4.20"
md5 = "0.7.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
ureq = { version = "2.8.0", features = ["json"] }
